--- a/翻译.md
+++ b/翻译.md
@@ -5,6 +5,6 @@ Graphite执行两个相当简单的任务：存储随时间变化的数字并绘
 7.1. 数据库：存储时间序列数据
 ----
 Graphite完全用Python写成，它由三个主要部分构成：一个名为`whisper`的数据库，一个名为`carbon`的后端守护进程，以及一个显示图形并提供基本UI的前端web应用。虽然`whisper`是专门为Graphite写的，但是它也可以被单独使用。从设计上来说，它和RRDtool使用的RRD数据库十分相似，只存储时间序列数字数据。我们通常将数据库视为服务器进程，客户端应用通过sockets与之交互。但是`whisper`是一个被应用用来操作和获取存储在特殊格式文件中数据的数据库，这一点与RRDtool十分相似。最基本的`whisper`操作是`create`用于创建一个新的`whisper`文件，`update`用于将新的数据点写到文件中，以及`fetch`用于获取数据点。<br>
- ![](https://github.com/tyh1995/Graphite/tree/master/graphs/1.png)<br>
+ ![image](https://github.com/tyh1995/Graphite/tree/master/graphs/1.png)<br>
 图7.1：`whisper`文件的基本结构<br>
 像图7.1中展示的那样，`whisper`文件由一个包含各种原数据的header节以及跟在其后的一个或多个archive节构成。每个archive都是一系列的连续数据点，这些数据点的格式为(timestamp, value)对。每当一个`update`或`fetch`操作被执行时，`whisper`根据timestamp以及archive配置来确定数据在文件中被写入或读取的位置。<br>
