--- a/翻译.md
+++ b/翻译.md
@@ -22,3 +22,25 @@ servers.www01.cpuUsageUser 44 1286269260<br>
 products.snake-oil.salesPerMinute 119 1286269260<br>
 
 从顶层来看，`carbon`所做的所有事情就是监听这个格式的数据并通过`whisper`将其尽可能快的存储到磁盘上。稍后我们将会讨论一些在典型磁盘下用于保证可扩展性并且获取最佳表现的小技巧的细节。<br>
+7.3. 前端：请求式图形
+----
+Graphite的web应用允许用户通过一个简单的基于URL的API来请求定制图形。绘图参数通过一个HTTP GET请求的查询字符串确定，一个PNG图形将会被返回给用户。例如如下URL:<br>
+>http://graphite.example.com/render?target=servers.www01.cpuUsage&width=500&height=300&from=-24h
+
+为度量`servers.www01.cpuUsage`及其过去24小时的数据请求了一个500×300的图形。事实上，只有target参数是必须的；其他参数都是可选的，如果省略的话将会使用默认值。<br>
+Graphite支持很多显示选项以及数据操作函数，调用这些函数只需要通过一个简单的功能语法。比如我们可以按照以下格式为前例中的度量绘制一个有10个点的移动平均图:<br>
+>target=movingAverage(servers.www01.cpuUsage,10)
+
+考虑到复杂的表达式和计算，函数可以嵌套。<br>
+下面是另一个例子，它给出了当天的销量累计，其度量为每分钟的销量:<br>
+>target=integral(sumSeries(products.*.salesPerMinute))&amp;from=midnight
+
+`sumSeries`函数计算出匹配`products.*.salesPerMinute`的度量之和的时间序列。随后`integral`计算出累计和而不是每分钟的数量。由此不难想象应该如何构建一个网站UI来查看和操作图形。像图7.3中展示的那样，Graphite有它自己的Composer UI，这个UI能随着使用者点击各个选项通过Javascript来修改图形的URL参数。<br>
+　　　　　　　　　　　　![](https://github.com/tyh1995/Graphite/blob/master/graphs/2.png)<br>
+　　　　　　　　　　　　　　　　　　　图7.3：Graphite的Composer界面
+7.4. 仪表盘
+----
+从一开始Graphite就作为创建基于网站的仪表盘的工具被使用。URL API使得这成为一个非常自然的使用方法。创建一个仪表盘就和创建一个满是如下标签的HTML页面一样简单：<br>
+>\<img src="../http://graphite.example.com/render?parameters-for-my-awesome-graph">
+
+但是，不是每个人都喜欢手动处理URL，因此Graphite的Composer UI提供了一个点击式的方法来创建一个图形，通过这个方法用户只需要复制粘贴URL就可以达到目的。当Graphite和另外一个允许快婿创建网站页面的工具（如wiki）结合使用时，创建仪表盘将会简单到非技术用户也能轻松搞定。<br>
