--- a/翻译.md
+++ b/翻译.md
@@ -36,7 +36,7 @@ Graphite支持很多显示选项以及数据操作函数，调用这些函数只
 >target=integral(sumSeries(products.*.salesPerMinute))&amp;from=midnight
 
 `sumSeries`函数计算出匹配`products.*.salesPerMinute`的度量之和的时间序列。随后`integral`计算出累计和而不是每分钟的数量。由此不难想象应该如何构建一个网站UI来查看和操作图形。像图7.3中展示的那样，Graphite有它自己的Composer UI，这个UI能随着使用者点击各个选项通过Javascript来修改图形的URL参数。<br>
-　　　　　　　　　　　　![](https://github.com/tyh1995/Graphite/blob/master/graphs/2.png)<br>
+　　　　　　　　　　　　![](https://github.com/tyh1995/Graphite/blob/master/graphs/3.png)<br>
 　　　　　　　　　　　　　　　　　　　图7.3：Graphite的Composer界面
 7.4. 仪表盘
 ----
@@ -50,3 +50,12 @@ Graphite支持很多显示选项以及数据操作函数，调用这些函数只
 想象一下已有一个包含10张图的仪表盘，它每分钟刷新一次。每当一个用户在浏览器中打开这个仪表盘，Graphite每分钟就需要多处理10张图。这个代价很快就变得十分的高昂。<br>
 一个简单的解决方案是每个图形只绘制一次，而每当用户发出请求时就返回给他们这个图形的复制品。Django网站框架（Graphite基于其建造）提供了一个极佳的快速缓存机制，它可以使用多种后端比如分布式内存对象缓存系统。分布式内存对象缓存系统本质上就是一个作为网络服务提供的哈希表。客户端应用可以像操作普通的哈希表一样获取和设置键值对。使用分布式内存对象缓存系统最主要的好处是一个高代价请求（如渲染一个图形）的结果可以被快速存储并且在处理接下来的请求的时候被取出。为了避免一直返回同一张图，该系统可以被配置为每隔一段时间清空缓存的图形。即使这个间隔只有几秒，其为Graphite减轻的负担也是巨大的，因为重复的请求太频繁了。<br>
 另一个造成大量渲染请求的情况是用户在Composer UI中改变显示选项和应用函数。用户每次改变某些东西，Graphite都必须重新绘制图形。每个请求都包含了相同的数据，因此将基本数据存储到分布式内存对象缓存系统中也是十分重要的。这使得UI能够保持对用户的响应，因为获取数据的步骤被跳过了。<br>
+7.6. 优化I/O
+----
+想象一下你有60,000个度量需要发送到你的Graphite服务器上，并且每个度量每分钟都有一个数据点。要知道每个度量在文件系统中都有自己的`whisper`文件。这意味着`carbon`每分钟需要对60,000个不同的文件进行一次写操作。只要`carbon`能够每1ms完成一次写操作，这些数据就能够处理完。这确实不难达到，但假如你每分钟有600,000个度量需要更新，或者你的度量每秒钟更新一次，或者你仅仅不能提供足够快的存储，不管是哪种情况，假定数据到来的速度超过了你的存储能够提供的写操作的速度，这个问题应该如何解决？<br>
+现在大多数的硬盘都有缓慢的寻找时间，这个缓慢的寻找时间是指和写入一系列连续的数据相比，在两个不同位置进行I/O操作的延时。这就意味着我们进行越多的连续写操作，效率就越高。但是如果我们需要在成千上万的文件中经常进行写操作，并且每次写操作数据量都十分小（一个`whisper`数据点仅有12字节），那么我们的硬盘就肯定会花大量的时间在寻找上。<br>
+在写操作速率有一个相对较低顶点的前提下，唯一让数据点流通量超过这个速率的办法就是在单个写操作内写多个数据点。由于`whisper`将连续的数据点连续的存放在硬盘上，所以这是可行的。因此我为`whisper`增加了一个名为`update_many`的函数，其功能是获取一个度量的一系列数据点然后将它们压缩到一个写操作内。尽管这使得每次写操作数据量变大，但是写十个数据点（120字节）和写一个数据点（12字节）在时间上的区别是可以忽略的。在不明显影响时间的前提下，这个函数会尽可能多的获取数据点。<br>
+随后我在`carbon`中实现了一个缓冲机制。每个到来的数据点都被映射到一个基于其度量名的队列中并添加到队尾。另一个线程不停的遍历所有的队列，取出所有数据点并将它们通过`update_many`写到对应的`whisper`文件中。现在我们回到之前的例子上，假如我们有600,000个每分钟更新一次的度量，我们的存储设备仅能支持每1ms一次写操作，那么每个队列就会平均保有10个数据点。这个策略唯一消耗的资源就是内存，而这个是相对较充裕的，因为每个数据点都只有十几个字节。<br>
+这个策略动态的缓冲尽可能多的数据点以维持数据点到来的速率，保证其不超过存储设备能提供的I/O操作速率。这个方法一个明显的优点是它增加了一定的弹性以解决临时的I/O速率降低问题。如果系统需要进行其它Graphite之外的I/O工作，那么写操作的速率很有可能就会降低，这个时候的`carbon`队列就会增长。队列越大，写的越多。因为所有的数据点流通量等于写操作速率乘以每次写操作的平均大小，所以只要还有足够的内存用于存放队列，`carbon`可以继续运行。`carbon`的队列机制如图7.4所示。<br>
+　　　　　　　　　　　　![](https://github.com/tyh1995/Graphite/blob/master/graphs/4.png)<br>
+　　　　　　　　　　　　　　　　　　　图7.4：`carbon`的队列机制
