--- a/翻译.md
+++ b/翻译.md
@@ -59,3 +59,13 @@ Graphite支持很多显示选项以及数据操作函数，调用这些函数只
 这个策略动态的缓冲尽可能多的数据点以维持数据点到来的速率，保证其不超过存储设备能提供的I/O操作速率。这个方法一个明显的优点是它增加了一定的弹性以解决临时的I/O速率降低问题。如果系统需要进行其它Graphite之外的I/O工作，那么写操作的速率很有可能就会降低，这个时候的`carbon`队列就会增长。队列越大，写的越多。因为所有的数据点流通量等于写操作速率乘以每次写操作的平均大小，所以只要还有足够的内存用于存放队列，`carbon`可以继续运行。`carbon`的队列机制如图7.4所示。<br>
 　　　　　　　　　　　　![](https://github.com/tyh1995/Graphite/blob/master/graphs/4.png)<br>
 　　　　　　　　　　　　　　　　　　　图7.4：`carbon`的队列机制
+7.7. 保证实时
+----
+缓冲数据点是一个很棒的优化`carbon`的I/O的方式，但是很快我的用户就发现了一个相当麻烦的副作用。回到我们之前的例子，我们有600,000个每分钟更新一次的度量，并且我们的存储设备只能提供每分钟60,000次写操作。这意味着我们在任意时间都有将近10分钟的数据被保存在`carbon`的队列中。对用户来说，这就意味着他们向Graphite的web应用请求的图形会确实最近10分钟的数据:这无疑非常糟糕。
+幸运的是解决方案是十分直接的。我为`carbon`添加了一个socket监听器，它为访问缓冲的数据点提供了一个查询接口，然后我修改了Graphite的web应用，使得它每次获取数据时都调用这个接口。接着web应用就把它从`carbon`中获取的数据和从磁盘中获取的数据结合起来，于是图形就是实时的了。就算在我们的例子中数据点是每分钟更新一次因此不算严格意义上的实时，但是事实上，图形中的数据点只要可以被访问到就会马上被`carbon`获取，因此它是实时的。
+7.8. 内核、缓存以及灾难性错误
+现在不难看出，Graphite的一个关键特点是其性能取决于它的I/O延时。之前我们一直假设我们系统的I/O延时始终较低，平均每次写操作1ms，但这是一个巨大的需要一些深入分析的假设。大部分硬盘根本没有那么快的速度；即使是磁盘阵列中的磁盘，随机访问的延迟也很可能超过1ms。但是即使你在一个老旧的笔记本电脑上测试向硬盘中写1KB的数据的速度，你也会发现写操作系统调用会在远小于1ms的时间内返回，这是为什么呢？
+当软件有不一致的或不符合预期的性能特性时，其原因通常是缓冲或缓存。在目前的情况下，我们两个方面都要处理。写操作系统调用严格意义上并不会把你的数据写到硬盘上，它仅仅将数据放到一个缓冲区中，内核会在之后将其中的数据写到硬盘中。这就是调用写操作返回的速度极快的原因。就算在缓冲区中的内容被写到硬盘中之后，这些数据也会被缓存以备接下来的读取。当然，缓冲和缓存都需要内存。
+聪明的内核开发者认为使用当前空闲的用户空间内存是一个比永久分配内存更好的主意。事实证明这是一个非常有效的性能促进方法，而且这也解释了为什么不管你为一个系统添加了多少内存，空闲内存都会在不多的I/O操作之后几乎降到0。如果你的用户空间应用没有在使用那些内存，那么很可能就是你的内核在使用它们。这个方法不好的地方就是当用户空间应用确定需要为自己分配更多的内存时，这些空闲内存就可能被从内核中拿走。而内核除了让出内存没有别的选择，从而就会丢失那块内存中所有的缓冲数据。
+那么所有的这些对Graphite意味着什么呢？我们刚刚强调了`carbon`对始终较低的I/O延时的依赖，并且我们也知道写操作系统调用能够迅速返回仅仅只因为数据只是被复制到一个缓冲中。那么当系统中没有足够的内存来让内核继续缓冲写操作数据时会发生什么呢？写操作会并发从而变得极其缓慢！这会导致`carbon`的写操作速率极大的降低，进一步导致`carbon`的队列增长，而这又需要更多的内存，使得内核陷入恶性循环中。最后，这种情况通常会导致`carbon`用光内存或者被愤怒的系统管理员杀死进程。
+为了避免这种灾难，我向`carbon`中添加了几种特性，包括可配置的队列中数据点数目限制以及各种`whisper`操作的速率限制。这些特性可以避免`carbon`失控，并且使得如丢失数据点或者拒绝接受更多数据点这样不好的影响更少。但是这些设置的合适的值是系统相关的，并且需要不少的测试来调整。它们是很有用的，但是不能从根本上解决问题，这需要更多的硬件。
